--- a/src/index.css
+++ b/src/index.css
@@ -18,8 +18,8 @@ body {
   margin: 0;
   display: flex;
   justify-content: center;
-  align-items: center;
-  min-width: 320px;
+  padding-top: 3rem;
+  min-width: 333px;
   min-height: 100vh;
 }
 button {
